# Arnoldi-Iteration

./: .gitignore  CMakeLists.txt  README.md  compare.py  environment.yml  setup
Python/: eigenvectors.py
cmake/: setvars.sh.in
python/: compare.py  convergence.py
src/: arnoldi.f90  arnoldi.f95  arnoldi.mod  clock.f90  convergence.f90  convergence.py  eig.f90  eigenvalues.f90  francis.f90  francis.f95  random.f90  ritz.f90  ritz.f95
